# amd-mi300x-ml-benchmarks

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.gemini/: config.yaml
.github/workflows/: deploy-docs.yml
datasets/: README.md
datasets/sample-results/: Llama-3.1-8B_latency_bs1_in128_out1024_float16_mem0.8_20250807_190325.json  Llama-3.1-8B_latency_bs1_in128_out1024_float16_mem0.9_20250807_190707.json  Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.8_20250807_185823.json  Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.9_20250807_190056.json  Llama-3.1-8B_latency_bs32_in128_out1024_float16_mem0.8_20250807_193001.json  Llama-3.1-8B_latency_bs32_in128_out1024_float16_mem0.9_20250807_193434.json  Llama-3.1-8B_latency_bs32_in128_out128_float16_mem0.8_20250807_192431.json  Llama-3.1-8B_latency_bs32_in128_out128_float16_mem0.9_20250807_192716.json  Llama-3.1-8B_latency_bs8_in128_out1024_float16_mem0.8_20250807_191603.json  Llama-3.1-8B_latency_bs8_in128_out1024_float16_mem0.9_20250807_192017.json  Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.9_20250807_191332.json
datasets/sample-results/containerized/: Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.8_20250807_191102.json
datasets/sample-results/monitoring/: cpu_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.8_20250807_185823.csv  cpu_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.9_20250807_190056.csv  cpu_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.8_20250807_191102.csv  cpu_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.9_20250807_191332.csv  gpu_power_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.8_20250807_185823.csv  gpu_power_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.9_20250807_190056.csv  gpu_power_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.8_20250807_191102.csv  gpu_power_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.9_20250807_191332.csv  gpu_temp_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.8_20250807_185823.csv  gpu_temp_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.9_20250807_190056.csv  gpu_temp_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.8_20250807_191102.csv  gpu_temp_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.9_20250807_191332.csv  gpu_usage_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.8_20250807_185823.csv  gpu_usage_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.9_20250807_190056.csv  gpu_usage_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.8_20250807_191102.csv  gpu_usage_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.9_20250807_191332.csv  memory_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.8_20250807_185823.csv  memory_Llama-3.1-8B_latency_bs1_in128_out128_float16_mem0.9_20250807_190056.csv  memory_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.8_20250807_191102.csv  memory_Llama-3.1-8B_latency_bs8_in128_out128_float16_mem0.9_20250807_191332.csv
docs/: CONTRIBUTING.md  index.md
docs/api/: index.md
docs/getting-started/: quick-start.md
docs/user-guide/: analysis-guide.md
hack/: update-readme-assets.sh
src/amd_bench/cli/: analyze.py
src/amd_bench/core/: analysis.py  reporters.py  statistics.py  visualizers.py
src/amd_bench/schemas/: benchmark.py  examples.py
src/amd_bench/utils/: logging.py  paths.py
tests/integration/core/: test_analysis_integration.py
tests/integration/schema/: test_benchmark_result.py
tests/unit/core/: test_analysis.py  test_batch_efficiency_analyzer.py  test_extract_vllm_latency_metrics.py
tests/unit/core/schemas/: test_benchmark_result.py
